# react-native-nitro-mecab

./: .gitignore  LICENSE  README.md  nitro.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitromecab/: NitroMecabPackage.kt
cpp/: HybridMecab.cpp  HybridMecab.hpp  Utils.hpp
cpp/mecab/: config.h  mmap.h
example/: .gitignore  README.md  app.json  eslint.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
example/src/app/: _layout.tsx
example/src/app/(tabs)/: _layout.tsx  index.tsx  lattice.tsx  misc.tsx  nodes.tsx
example/src/components/: container.tsx  divider.tsx  sentence.tsx
example/src/utils/: bench.ts  color.ts  dictionary.ts
package/: LICENSE  NitroMecab.podspec  nitro.json  package.json
package/android/src/main/cpp/: cpp-adapter.cpp
package/cpp/mecab/: utils.cpp  utils.h
package/src/: index.ts
package/src/specs/: mecab.nitro.ts
package/src/types/: model.ts
scripts/: release.sh
src/: process.ts  trans.ts
src/types/: lattice.ts  tagger.ts
